fixed typo in CMAME citation

--- a/docs/publications/cmame2020.bib
+++ b/docs/publications/cmame2020.bib
@@ -1,6 +1,6 @@
 @article{Hart2020,
     author = {Hart, Kenneth A and Rimoli, Julian J},
-    title = {Generation of statistically representative microstructures with direct grain geomety control},
+    title = {Generation of statistically representative microstructures with direct grain geometry control},
     journal = {Computer Methods in Applied Mechanics and Engineering},
     volume = {370},
     artnum = {113242},
